# QuOC

./: .gitignore  BackendServer.py  OptimizerBackend.py  README.md  __init__.py  dcrab_setting.json  mloop_settings.json  mloop_vodt_tweezer.json  optimize.py  optimize_mloop.py  parameter_search_settings.json  pyproject.toml
FoM/: Fidelity.py  Fluctuations.py  FoM.py  NormalVariable.py  PreparationSpeed.py  __init__.py  fidelities.py
OptimizationConfigurations/: mloop_hodt_vodt_handover.json  mloop_hodt_vodt_tweezer_handover.json  mloop_mot_hodt_handover.json  mloop_mot_hodt_handover_20250319.json  mloop_sai.json  mloop_spilling_fidelity.json  mloop_tweezer_loading.json  mloop_tweezer_temperatures.json  mloop_vodt_tweezer_handover.json  parameter_search_settings_MOT.json
utils/: logger.py
