[tool.poetry]
name = "quoc"
version = "0.1.0"
description = ""
authors = ["Daniel Dux <dux@physi.uni-heidelberg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
quocs-lib = "^0.0.61"
h5py = "^3.11.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
mpmath = "^1.3.0"
scikit-learn = "^1.5.1"
scikit-image = "^0.24.0"
fewfermions = {path = "../08-FewFermions"}
m-loop = "^3.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
